--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Eunsollee's 웹프로젝트</title>
+    <title>Eunsollee's 웹프로젝트 Comming Soon</title>
+    <!-- 외부에 존재하는 CSS파일 링크 -->
+    <link rel="stylesheet" href="./css/page.css">
   </head>
   <body>
-    <h1>
-      GitHub Page Design DEMO
-    </h1>
+        <img src="./assets/commingsoon.jpg" alt="Nez Comming Soon">
   </body>
 </html>
