8일차 수업과 과제업로드

--- a/DAY07/www/index.html
+++ b/DAY07/www/index.html
@@ -56,7 +56,7 @@
     <div class="icon-wrapper">
       <img
         src="./assets/icon-Ice-Cream.png"
-		    srcset="./assets/icon-Ice-cream@2x.png 2x"
+		    srcset="./assets/icon-cream@2x.png 2x"
 		    class="icon-cream">
     </div>
     <div class="icon-wrapper">
